src/objects/Order_Details_Extendeds__x.object
<CustomObject>
    <description>Order_Details_Extendeds</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Order_Details_Extendeds</externalName>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount</description>
        <externalDeveloperName>Discount</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtendedPrice__c</fullName>
        <description>ExtendedPrice</description>
        <externalDeveloperName>ExtendedPrice</externalDeveloperName>
        <label>ExtendedPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ProductID</description>
        <externalDeveloperName>ProductID</externalDeveloperName>
        <label>ProductID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>UnitPrice</description>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Order_Details_Extendeds</label>
    <pluralLabel>Order_Details_Extendeds</pluralLabel>
</CustomObject>